# Embedded-System-Project

./: README.md
Files/Pub/: CMakeLists.txt
Files/Pub/src/: Publisher.cpp
Files/Server/: CMakeLists.txt
Files/Server/src/: httpServer.cpp
Files/Services/: Pub.service  ServerMe.service  Sub.service  inpService
Files/Sub/: CMakeLists.txt
Files/Sub/src/: Subscriber.c
